Fixed vertical slider functionality on firefox and mobile browsers

--- a/css/sliders.css
+++ b/css/sliders.css
@@ -52,13 +52,16 @@ input[type="range"] {
     -webkit-box-shadow: inset 0 1px 0 0 #0d0e0f, inset 0 -1px 0 0 #3a3d42;
     outline: none; /* no focus outline */
     transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
 
 }
 
 input[type="range"]::-moz-range-track {
     border: inherit;
     background: transparent;
-    -moz-transform: rotate(270deg);
 }
 
 input[type="range"]::-ms-track {
